force-app/main/default/objects/AH_SFDC_Source_Change__c/AH_SFDC_Source_Change__c.object-meta.xml
<CustomObject>
    <description>Junction object between NI_Change_Control__c &amp; AH_SFDC_Source_Control__c</description>
    <label>Salesforce Source Code Change</label>
    <nameField>
        <displayFormat>SSC-{0000000}</displayFormat>
        <label>Source Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Source Code Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>