force-app/main/default/objects/AH_SFDC_Source_Change__c/fields/AH_SFDC_Source_Control__c.field-meta.xml
<CustomField>
    <fullName>AH_SFDC_Source_Control__c</fullName>
    <label>Salesforce Source Control</label>
    <referenceTo>AH_SFDC_Source_Control__c</referenceTo>
    <relationshipName>Source_Code_Changes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>