force-app/main/default/objects/AH_SFDC_Source_Change__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <formula>NI_Change_Control__r.Date_Changed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Date</label>
    <type>DateTime</type>
</CustomField>