force-app/main/default/objects/AH_SFDC_Source_Change__c/fields/NI_Change_Control__c.field-meta.xml
<CustomField>
    <fullName>NI_Change_Control__c</fullName>
    <label>NI Change Control</label>
    <referenceTo>NI_Change_Control__c</referenceTo>
    <relationshipName>Source_Code_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>