force-app/main/default/objects/AH_SFDC_Source_Change__c/listViews/All_Changes.listView-meta.xml
<ListView>
    <fullName>All_Changes</fullName>
    <columns>NAME</columns>
    <columns>AH_SFDC_Source_Control__c</columns>
    <columns>NI_Change_Control__c</columns>
    <columns>Component__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Change_Date__c</columns>
    <columns>Production_Change__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component__c</field>
        <operation>equals</operation>
        <value>AH_MBHiltonRemove</value>
    </filters>
    <label>All Changes</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>