force-app/main/default/objects/AH_SFDC_Source_Change__c/listViews/All_Changes_to_Classes.listView-meta.xml
<ListView>
    <fullName>All_Changes_to_Classes</fullName>
    <columns>NAME</columns>
    <columns>AH_SFDC_Source_Control__c</columns>
    <columns>NI_Change_Control__c</columns>
    <columns>Component__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Change_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Apex Class</value>
    </filters>
    <label>All Changes to Classes</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>